--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    background: url("/photo/fon.jpg");
+    background: url("photo/fon.jpg");
     background-position: center;
     padding: 0;
     
